--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -34,7 +34,7 @@ a{
 }
 
 body{
-    background-color:#014e56;
+    background-color:#fff;
     font-family: "livvic",sans-serif;
     margin: 0px;
 }
