--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ a {
 }
 
 body {
-  background-color: #014e56;
+  background-color: #fff;
   font-family: "livvic", sans-serif;
   margin: 0px;
 }
@@ -121,8 +121,97 @@ img {
   background: #f4f4f4;
   border-radius: 10px;
   height: 188px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 29px;
-  margin-right: 29px;
+  margin-right: 25px;
+  margin-left: 25px;
+  text-align: center;
+  margin-top: 70px;
+}
+
+.section2_logo {
+  width: 111px;
+  height: 54px;
+  margin-right: 32px;
+  margin-top: 35px;
+}
+
+@media screen and (min-width: 992px) {
+  .section2_logos {
+    height: 180px;
+    gap: 225px;
+  }
+}
+.section3_lorem {
+  margin-top: 65px;
+  margin-left: 40px;
+  margin-right: 40px;
+  width: 300px;
+  height: 163px;
+}
+
+.about_us_top {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 180%;
+  color: #222;
+}
+
+.img_about_can {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about_us {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 187%;
+  color: #525252;
+  margin-top: 20px;
+  margin-bottom: 60px;
+}
+
+.about_can {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 187%;
+  color: #525252;
+}
+
+.img_laptop {
+  margin-top: 45px;
+  border-radius: 5px;
+  width: 319px;
+  height: 169px;
+}
+
+.img_laptop_big {
+  display: none;
+}
+
+@media screen and (min-width: 992px) {
+  .important_lorem_section3 {
+    width: 427px;
+    height: 362px;
+  }
+  .img_laptop {
+    display: none;
+  }
+  .img_laptop_big {
+    display: inline-block;
+  }
+  .section3_lorem {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .important_lorem_section3 {
+    width: 427px;
+    height: 362px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }/*# sourceMappingURL=main.css.map */
